Limit selector array to 8,192 elements

Since the selector index field in RuleData is only 13 bits, we can only
support up to 8,192 plain selectors in a rule. We must discard any
selectors that don't fit within this range.

This works exactly as before except selectors are looked up correctly
now.

BUG=804179

Change-Id: I11c0acfe27813d98f24f72fb7e50f13b326a0e84